# OctopusFramework

./: OPlayer使用方法.txt  build.gradle  gradle.properties  settings.gradle
TestApplication/: build.gradle
libFOSUtils/: CMakeLists.txt  build.gradle
libFOSUtils/src/main/: AndroidManifest.xml
libFOSUtils/src/main/cpp/bt/: bluetooth.c  bluetooth.h  client.h
libFOSUtils/src/main/cpp/dvd/: CMakeLists.txt  com_my_hardware_dvs_DVideoSpec.h  mub_keypad.h  videodisc.c
libFOSUtils/src/main/cpp/mcu/: ak_mcu.h  mcu.c
libFOSUtils/src/main/cpp/setting/: Android.mk  CMakeLists.txt  com_my_hardware_setting_HWSetting.h  setting.c
libFOSUtils/src/main/cpp/uart/: test.cpp
libFOSUtils/src/main/cpp/update/: Android.mk  CMakeLists.txt  com_my_hardware_mud_MubUpdate.h  mub_update.h  update.c
libFOSUtils/src/main/java/com/common/presentation/: PresentationUIBase.java
libFOSUtils/src/main/java/com/common/util/: AppConfig.java  BroadcastUtil.java  Kernel.java  MachineConfig.java  PublicData.java  SystemConfig.java  SystemProperties.java  Util.java  UtilCarKey.java  UtilSystem.java
libFOSUtils/src/main/java/com/common/utils/: AKProperty.java  AppConfig.java  BroadcastUtil.java  CrashHandler.java  EditDistance.java  Kernel.java  MachineConfig.java  MyCmd.java  ProtocolAk47.java  PublicData.java  SettingProperties.java  SystemConfig.java  SystemProperties.java  Util.java  UtilCarKey.java  UtilSystem.java
libFOSUtils/src/main/java/com/rockchip/gl/: GLSurfaceView.java
libFOSUtils/src/main/java/com/zhuchao/android/: TPlatform.java
libJOSUtils/: CMakeLists.txt  build.gradle
libJOSUtils/src/main/: AndroidManifest.xml
libJOSUtils/src/main/cpp/: SerialPort.c  SerialPort.h
libJOSUtils/src/main/cpp/bt/: CMakeLists.txt  client.c
libJOSUtils/src/main/cpp/mcu/: CMakeLists.txt  gen_SerialPort_h.sh  mcu.h
libJOSUtils/src/main/cpp/uart/: CMakeLists.txt  SerialPort.c  SerialPort.h
libJOSUtils/src/main/java/com/common/presentation/: PresentationManager.java  PresentationUIBase.java
libJOSUtils/src/main/java/com/common/util/: AKProperty.java  AppConfig.java  BroadcastUtil.java  CrashHandler.java  EditDistance.java  MachineConfig.java  MyCmd.java  ProtocolAk47.java  PublicData.java  SystemConfig.java  Util.java  UtilCarKey.java  UtilSystem.java
libJOSUtils/src/main/java/com/common/view/: KeyButtonRipple.java  KeyButtonView.java
libJOSUtils/src/main/java/com/rockchip/gl/: GLSurfaceView.java
(+1311 files in other folders)
